<resources>
    <string name="app_name">SCAN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="linear_regression_1">The measure of the extent of the relationship between two variables is shown by the correlation coefficient. The range of this coefficient lies between -1 to +1. This coefficient shows the strength of the association of the observed data for two variables. \n</string>
    <string name="pie2">The chart is divided into sectors, where each sector shows the relative size of each value.\n</string>
    <string name="pie1">A Pie Chart (or Pie Graph) is a special chart that uses pie slices to show relative sizes of data.</string>
    <string name="normal_dist2">Normal distributions are symmetrical, but not all symmetrical distributions are normal.\n\nIn reality, most pricing distributions are not perfectly normal.\n</string>
    <string name="normal_dist1">A normal distribution is the proper term for a probability bell curve. \n\nIn a normal distribution the mean is zero and the standard deviation is 1. \nIt has zero skew and a kurtosis of 3.\n</string>
    <string name="classic1">Probability is a statistical concept that measures the likelihood of something happening. Classical probability is the statistical concept that measures the likelihood of something happening, but in a classic sense, it also means that every statistical experiment will contain elements that are equally likely to happen.\n\n</string>
    <string name="classic2">The typical example of classical probability would be a fair dice roll because it is equally probable that you will land on any of the 6 numbers on the die: 1, 2, 3, 4, 5, or 6.\n</string>
    <string name="cond_prob1">Conditional probability is defined as the likelihood of an event or outcome occurring, based on the occurrence of a previous event or outcome. Conditional probability is calculated by multiplying the probability of the preceding event by the updated probability of the succeeding, or conditional, event.\n</string>
    <string name="cond_prob2">It is often stated as the probability of A given B and written as P(A|B), where the probability of A depends on that of B happening.\n\nP(A|B) is derived by multiplying the probability of both A and B occurring and dividing that product by the probability of A by itself.\n</string>
    <string name="bayes1">Bayes theorem is a mathematical formula for determining conditional probability. Conditional probability is the likelihood of an outcome occurring, based on a previous outcome occurring. Bayes\' theorem provides a way to revise existing predictions or theories (update probabilities) given new or additional evidence.\n</string>
    <string name="bayes2">Bayes\' theorem allows you to update predicted probabilities of an event by incorporating new information.\n</string>
    <string name="addrule1">The addition rule for probabilities describes two formulas, one for the probability for either of two mutually exclusive events happening and the other for the probability of two non-mutually exclusive events happening.\n\nThe addition rule for probabilities consists of two rules or formulas, with one that accommodates two mutually-exclusive events and another that accommodates two non-mutually exclusive events.\n</string>
    <string name="addrule2">Non-mutually-exclusive means that some overlap exists between the two events in question and the formula compensates for this by subtracting the probability of the overlap, P(Y and Z), from the sum of the probabilities of Y and Z.\n</string>
    <string name="addrule3">The first formula is just the sum of the probabilities of the two events. The second formula is the sum of the probabilities of the two events minus the probability that both will occur.\n</string>
    <string name="binom1">Binomial probability refers to the probability of exactly x successes on n repeated trials in an experiment which has two possible outcomes (commonly called a binomial experiment).\n</string>
    <string name="binom2">A binomial distribution can be thought of as simply the probability of a SUCCESS or FAILURE outcome in an experiment or survey that is repeated multiple times. The binomial is a type of distribution that has two possible outcomes (the prefix “bi” means two, or twice). For example, a coin toss has only two possible outcomes: heads or tails and taking a test could have two possible outcomes: pass or fail.\n</string>
    <string name="binom3">Note that if p is the probability of success of a single trial, then (1−p) is the probability of failure of a single trial.\n</string>
    <string name="ttest1">one-sample t-test is used to compare the mean of a population to a specified theoretical mean (μ). The One Sample t Test determines whether the sample mean is statistically different from a known or hypothesized population mean. \n\nThe One Sample t Test is a parametric test.\n</string>
    <string name="ttest2"><![CDATA[The calculated t value is then compared to the critical t value from the t distribution table with degrees of freedom df = n – 1 and chosen confidence level. If the calculated t value > critical t value, then we reject the null hypothesis.\n]]></string>
    <string name="linear1">A linear regression line equation is written in the form of:</string>
    <string name="linear2">where X is the independent variable and plotted along the x-axis. \n\nY is the dependent variable and plotted along the y-axis. \n\nThe slope of the line is b, and a is the intercept (the value of y when x = 0).\n</string>
    <string name="linear3">‘n’ is the sample size (number of data points). \n</string>
    <string name="twopt1">The distance formula is an algebraic expression used to determine the distance between two points with the coordinates (x1, y1) and (x2, y2).\n</string>
    <string name="twopt2">Sometimes you need to find the point that is exactly between two other points. This middle point is called the midpoint. By definition, a midpoint of a line segment is the point on that line segment that divides the segment in two congruent segments.\n\nIf the end points of a line segment is (x1, y1) and (x2, y2) then the midpoint of the line segment has the coordinates: \n</string>
    <string name="kendall1">Kendall’s Tau is a non-parametric measure of relationships between columns of ranked data. The Tau correlation coefficient returns a value of 0 to 1, \n\nwhere:\n 0 is no relationship,\n 1 is a perfect relationship.\n</string>
    <string name="kendall2">A quirk of this test is that it can also produce negative values (i.e. from -1 to 0). Unlike a linear graph, a negative relationship doesn’t mean much with ranked columns (other than you perhaps switched the columns around), so just remove the negative sign when you’re interpreting Tau.\n</string>
    <string name="kendall3">Several version’s of Tau exist.\n\nTau -A and Tau-B are usually used for square tables (with equal columns and rows). Tau-B will adjust for tied ranks.\n\nTau-C is usually used for rectangular tables. For square tables, Tau-B and Tau-C are essentially the same.\n\nMost statistical packages have Tau-B built in, but you can use the following formula to calculate it by hand:\n\n</string>
    <string name="kendall4">Where C is the number of concordant pairs and D is the number of discordant pairs.</string>
    <string name="kendall5">Non-parametric test: it does not depend upon the assumptions of various underlying distributions; this means that it is distribution free.\n\nConcordant pairs: if both members of one observation are larger than their respective members of the other observations.\n\nDiscordant pairs: if the two numbers in one observation differ in opposite directions.\n</string>
    <string name="correlation1">Correlation-based distance considers two objects to be similar if their features are highly correlated, even though the observed values may be far apart in terms of geometrical distance. \n</string>
    <string name="correlation2">The distance between two objects is 0 when they are perfectly correlated. If you want to identify clusters of observations with the same overall profiles regardless of their magnitudes, then you should go with correlation - based distance as a dissimilarity measure.\n</string>
    <string name="correlation3">Where,\n r = correlation coefficient\n n = number of observations \n x = 1st variable in the context \n y = 2nd variable</string>
    <string name="chi1">We select a random sample of size n from a normal population, having a standard deviation equal to σ. We find that the standard deviation in our sample is equal to s. \nGiven these data, we can define a statistic, called chi-square, using the following equation:\n</string>
    <string name="chi2">The distribution of the chi-square statistic is called the chi-square distribution. The chi-square distribution is defined by the following probability density function:\n</string>
    <string name="chi3">where Y0 is a constant that depends on the number of degrees of freedom, Χ2 is the chi-square statistic, v = n - 1 is the number of degrees of freedom, and e is a constant equal to the base of the natural logarithm system (approximately 2.71828). Y0 is defined, so that the area under the chi-square curve is equal to one.\n</string>
    <string name="chi4">The chi-square distribution has the following properties:\n\n1. The mean of the distribution is equal to the number of degrees of freedom: μ = v.\n\n2. The variance is equal to two times the number of degrees of freedom: σ2 = 2 * v.\n\n3. When the degrees of freedom are greater than or equal to 2, the maximum value for Y occurs when Χ2 = v - 2.\n\n4. As the degrees of freedom increase, the chi-square curve approaches a normal distribution.\n</string>
    <string name="mean1">Mean is the arithmetic average of a data set. This is found by adding the numbers in a data set and dividing by the number of observations in the data set.\n</string>
    <string name="mean2">Here,\n ∑ represents the summation\n X represents observations\n N represents the no of observations ..\n</string>
    <string name="median1">The median is the middle number in a data set when the numbers are listed in either ascending or descending order. \n\nIf the total number of observations (n) is an odd number, then the formula is given below:\n</string>
    <string name="median2">If the total number of the observations (n) is an even number, then the formula is given below:</string>
    <string name="mode1">The mode is the value that occurs the most often in a data set and the range is the difference between the highest and lowest values in a data set.</string>
    <string name="stdev1">Standard deviation measures the dispersion of a dataset relative to its mean.\n\nA volatile stock has a high standard deviation, while the deviation of a stable blue-chip stock is usually rather low.\n\nAs a downside, the standard deviation calculates all uncertainty as risk, even when it’s in the investor\'s favor—such as above average returns.</string>
    <string name="variance1">Variance (σ2) in statistics is a measurement of the spread between numbers in a data set. That is, it measures how far each number in the set is from the mean and therefore from every other number in the set.\n\nVariance is calculated by taking the differences between each number in the data set and the mean, then squaring the differences to make them positive, and finally dividing the sum of the squares by the number of values in the data set.</string>
</resources>