<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EqProbability"
        android:background="@drawable/modulebg1">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

                <RelativeLayout
                    android:id="@+id/rlayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Probability"
                        android:fontFamily="@font/balsamiqsans_bold"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:textColor="#8A0B0B"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlayout1"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Classical Probability :"
                        android:fontFamily="@font/kumbhsans_bold"
                        android:textSize="24sp"
                        android:textColor="#D61111"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv1"
                        android:layout_margin="5dp"
                        android:text="@string/classic1"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv2"
                        android:layout_margin="5dp"
                        android:text="@string/classic2"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>


                    <ImageView
                        android:id="@+id/iv1"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_below="@id/tv3"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="42dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="47dp"
                        android:layout_marginRight="47dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/classic_eq" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlayout2"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Conditional Probability :"
                        android:fontFamily="@font/kumbhsans_bold"
                        android:textSize="24sp"
                        android:textColor="#D61111"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv4"
                        android:layout_margin="5dp"
                        android:text="@string/cond_prob1"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv5"
                        android:layout_margin="5dp"
                        android:text="@string/cond_prob2"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>


                    <ImageView
                        android:id="@+id/iv2"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:layout_below="@id/tv6"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="42dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="47dp"
                        android:layout_marginRight="47dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/con_prob" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlayout3"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/tv7"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Bayes Theorem :"
                        android:fontFamily="@font/kumbhsans_bold"
                        android:textSize="24sp"
                        android:textColor="#D61111"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv7"
                        android:layout_margin="5dp"
                        android:text="@string/bayes1"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv8"
                        android:layout_margin="5dp"
                        android:text="@string/bayes2"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <ImageView
                        android:id="@+id/iv3"
                        android:layout_width="wrap_content"
                        android:layout_height="180dp"
                        android:layout_below="@id/tv9"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="42dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="47dp"
                        android:layout_marginRight="47dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/bayes" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlayout4"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/tv10"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Rules of Addition :"
                        android:fontFamily="@font/kumbhsans_bold"
                        android:textSize="24sp"
                        android:textColor="#D61111"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv10"
                        android:layout_margin="5dp"
                        android:text="@string/addrule1"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv11"
                        android:layout_margin="5dp"
                        android:text="@string/addrule2"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <ImageView
                        android:id="@+id/iv4"
                        android:layout_width="wrap_content"
                        android:layout_height="190dp"
                        android:layout_below="@id/tv12"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="42dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="47dp"
                        android:layout_marginRight="47dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/addrule" />

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv4"
                        android:layout_margin="5dp"
                        android:text="@string/addrule3"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlayout5"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/tv14"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Binomial :"
                        android:fontFamily="@font/kumbhsans_bold"
                        android:textSize="24sp"
                        android:textColor="#D61111"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv14"
                        android:layout_margin="5dp"
                        android:text="@string/binom1"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv15"
                        android:layout_margin="5dp"
                        android:text="@string/binom2"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                    <ImageView
                        android:id="@+id/iv5"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_below="@id/tv16"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="42dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="47dp"
                        android:layout_marginRight="47dp"
                        android:foregroundGravity="center"
                        android:src="@drawable/binomial" />

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/tv17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv5"
                        android:layout_margin="5dp"
                        android:text="@string/binom3"
                        android:fontFamily="@font/kumbhsans_regular"
                        android:textSize="16sp"
                        android:textColor="#000000"/>

                </RelativeLayout>


            </RelativeLayout>

        </ScrollView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>


